--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".RegisterActivity"
+            android:name=".logIn.RegisterActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".SignInActivity" />
+        <activity android:name=".logIn.SignInActivity" />
 
-        <activity android:name=".LatestMessegesActivity">
+        <activity android:name=".messages.LatestMessegesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,16 +24,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".NewMessageActivity">
+        <activity android:name=".messages.NewMessageActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".LatestMessegesActivity" />
+                android:value=".messages.LatestMessegesActivity" />
         </activity>
 
-        <activity android:name=".ChatLogActivity">
+        <activity android:name=".messages.ChatLogActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".LatestMessegesActivity" />
+                android:value=".messages.LatestMessegesActivity" />
         </activity>
     </application>
 
